--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+<div class="text">
+    Browse sports / Tennis / Teena Jonas / Cart
+</div>
+<div class="mycart">
+    My Cart (1 items)
+</div>
 
+<div class="box">
+    
+</div>
 
 
 </body>
