--- a/index.html
+++ b/index.html
@@ -25,77 +25,75 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <!-- left side  -->
+
     <div class="text">
         Browse sports / Tennis / Teena Jonas / Cart
     </div>
-    <div>
 
-        <div class="mycart">
-            My Cart (1 items)
+    <div class="mycart">My Cart (1 items)</div>
+
+    <div class="cart-wrapper">
+
+        <div class="left-section">
+
+            <div class="box">
+                <div class="top">
+                    <h2>Coach: Tenna Johans</h2>
+                    <span class="price">KWD 10.000</span>
+                </div>
+
+                <h4>Subscription: 5 Sessions Packages</h4>
+                <h4>Location: New York</h4>
+
+                <div class="bottom">
+                    <span>(1) 10/10/2023</span>
+                    <span>8:00am - 9:00am</span>
+                </div>
+
+                <div class="bottom-2">
+                    <span>(2) 11/10/2023</span>
+                    <span>9:00am - 10:00am</span>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="top">
+                    <h2>Coach: Kia James</h2>
+                    <span class="price">KWD 10.000</span>
+                </div>
+
+                <h4>Subscription: 6 Sessions Packages</h4>
+                <h4>Location: New York</h4>
+
+                <div class="bottom">
+                    <span>(1) 10/10/2023</span>
+                    <span>8:00am - 9:00am</span>
+                </div>
+
+                <div class="bottom-2">
+                    <span>(2) 11/10/2023</span>
+                    <span>9:00am - 10:00am</span>
+                </div>
+            </div>
+
         </div>
 
-        <div class="box">
+        <div class="small-box">
+            <h3>Order Summary</h3>
+
             <div class="top-1">
-                <h2>Coach:Tenna Johans</h2>
-
-                <span class="price">KWD 10.000</span>
+                <span>Sub Total:</span>
+                <span>KWD 10.000</span>
             </div>
-            <h4>Subscription:5 Sessions Packages</h4>
-            <h4>Location: New York</h4>
 
-            <div class="bottom">
-                <span><span>(1)</span>10/10/2023</span>
-                <span>8:00am - 9:00am</span>
+            <div class="top-2">
+                <span>Total:</span>
+                <span>KWD 10.000</span>
             </div>
-            <div class="bottom-2">
-                <span><span>(2)</span>11/10/2023</span>
-                <span>8:00am - 9:00am</span>
-            </div>
+
+            <button class="pay">Pay Now</button>
         </div>
     </div>
-    <!-- right box -->
-    <div class="small-box">
-        <div class="top">
-            <h3>Order summary</h3>
-        </div>
-        <div class="top">
-            <h3>Sub-Total</h3>
-            <span>KWD 10.000</span>
-        </div>
-        <div class="top">
-            <h3>Total</h3>
-            <span>KWD 10.000</span>
-            
-        </div>
-        <button>PayNow</button>
-    </div>
-
-
-
-
-    <div class="box">
-        <div class="top-1">
-            <h2>Coach:kia James</h2>
-            <span class="price">KWD 10.000</span>
-        </div>
-
-        <h4>Subscription:6 Sessions Packages</h4>
-        <h4>Location: New York</h4>
-
-        <div class="bottom">
-            <span><span>(1)</span> 10/10/2023</span>
-            <span>8:00am - 9:00am</span>
-        </div>
-        <div class="bottom-2">
-            <span><span>(2)</span>11/10/2023</span>
-            <span>8:00am - 9:00am</span>
-        </div>
-
-    </div>
-
-    </div>
-
 
 
 </body>
